--- a/SENTRA1/Backend/.env
+++ b/SENTRA1/Backend/.env
@@ -1,11 +1,10 @@
-PORT=5000
-NODE_ENV=development
+NODE_ENV=production
 
 MONGO_URI=mongodb+srv://sentra_admin:pass1234@cluster0.jycn7sh.mongodb.net/sentra
 
 JWT_SECRET=your_super_secret_jwt_key_here_change_this_in_production
 
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://sentra-six.vercel.app
 
 CLOUDINARY_CLOUD_NAME=dhhkub4xj
 CLOUDINARY_API_KEY=597922879361535
